<resources>

    <string name="app_name">LoveCal</string>
    <string name="menu_settings">Settings</string>   
    <string name="dialog_message">Need to Enter your name and partner name</string>
    <string name="dialog_numeric_message">Need to Enter Alpatic Value</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_secound_page">Love Cal</string>   
    <string name="title_activity_progrss">ProgrssActivi</string>
    <string name="alertbox_title_msg">Message from us </string>
    <string name="alertbox_title_percentage">Your Love Percentage </string>
    <string name="follwme_button">Follow me</string>   
    <string name="slect_sex">Select your gender</string>
    <string name="aboutlove"> " Love Never Fail,People Fail On Love "</string>
   
    
    <!-- Page Name -->
    <string name="title_activity_secoundpage">Secoundpage</string>   
    <string name="title_activity_location">Location</string>
    <string name="title_activity_main_page">Love Cal</string>
    
    <!-- Text View -->
    <string name="yourName">Your Name          :</string>
    <string name="yourpartnername">Partner Name     :</string>
    <string name="partnername">Partner  :</string>  
    <string name="you">You         :</string>  
    
    <!-- Buttons -->    
    <string name="button_Love">Check Your Love</string>
    <string name="button_image">Check Message</string>
    <string name="button_song">Check Your Romantic Place</string>
    <string name="button_back">Check Another One </string>
    <string name="follwme_button1">Facebook</string>
    <string name="follwme_button2">Twitter</string>
    <string name="Button_name">Enter</string>
    
    <!-- Link URL -->
    <string name="twitterURl">https://twitter.com/kayu_karan</string>
    <string name="facebookURl">https://www.facebook.com/kayukaranp1</string>
    
    <!-- Menu Title -->
    <string name="main_menu1">New Cal</string>
    <string name="main_menu2">About Me</string>
    
    <!-- About Me -->
    <string name="AboutMe">I am gratuated from University Of colombo.</string>
    
    <!-- CopyRights -->
    <string name="copyrights">Copyright © 2013 · Kayukaran </string>

</resources>