<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="30dp" >
        
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_marginLeft="5dp"
        android:text="@string/you"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/message_textview"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/partnername"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/message_textview"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/message_output"
        android:textStyle="bold|italic" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/textView3"
        android:contentDescription="@string/follwme_button1"
        android:src="@drawable/facebook" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="180dp"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/Button01"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/btn1"
            android:contentDescription="@string/button_Love"
            android:text="@string/button_Love"
            android:textColor="@color/button_bg"
            android:textSize="14dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/Button02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn2"
            android:contentDescription="@string/button_image"
            android:text="@string/button_image"
            android:textColor="@color/button_bg"
            android:textSize="14dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/Button03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn3"
            android:contentDescription="@string/button_image"
            android:text="@string/button_song"
            android:textColor="@color/button_bg"
            android:textSize="14dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/Button04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn4"
            android:contentDescription="@string/button_back"
            android:text="@string/button_back"
            android:textColor="@color/button_bg"
            android:textSize="14dp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textMsg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/message_output"
        android:textStyle="bold|italic" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/imageButton1"
        android:contentDescription="@string/follwme_button2"
        android:src="@drawable/twiter" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:text="@string/follwme_button"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/follow_text"
        android:textStyle="bold" />

     

</RelativeLayout>

        
            </ScrollView>
            
   
 </LinearLayout>