<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_weight="0.39" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:minHeight="36dp"
                android:text="@string/yourName"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/bg_textview"
                android:textSize="22dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/bg_edittext"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="36dp"
                android:minWidth="100dp"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:minHeight="36dp"
                android:text="@string/yourpartnername"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/bg_textview"
                android:textSize="22dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/bg_edittext"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="36dp"
                android:minWidth="100dp"
                android:paddingLeft="10dp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:text="@string/Button_name"
                android:textColor="@color/button_bg"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/aboutlove"
                android:textColor="@color/txtmsg"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/copyrights"
                android:textColor="@color/copyrights"
                android:textSize="14dp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
